# agent-mcp

./: .env.example  .firebaserc  .gcloudignore  .gitignore  .replit  Dockerfile  IMPLEMENTATION_STATUS.md  MANIFEST.in  PYPI_PUBLISHING.md  Procfile  README.md  SETUPUP_GUIDE.md  __init__.py  agent_network_example.py  agentmcp_final_summary.py  autonomous_agent_workflow.py  autonomous_langgraph_network.py  check_imports.py  coinbase_adapter.py  collaborative_task_example.py  crewai_mcp_adapter.py  enhanced_mcp_agent.py  firestore.indexes.json  framework_examples.py  full_log.txt  group_chat_example.py  heterogeneous_group_chat.py  l402_adapter.py  langchain_mcp_adapter.py  langgraph_agent_network.py  langgraph_collaborative_task.py  langgraph_example.py  langgraph_mcp_adapter.py  mcp_agent.py  mcp_decorator.py  mcp_langgraph.py  mcp_network_server.py  mcp_payment_adapter.py  mcp_transport.py  mcp_transport_enhanced.py  (+34 more)
.cache/41/: cache.db
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  publish-to-pypi.yml
agent_mcp/: __init__.py  a2a_mcp_adapter.py  a2a_protocol.py  agent_dns.py  agent_lightning_library.py  agent_lightning_mcp_adapter.py  argo_agent_mcp_adapter.py  autogen_mcp_adapter.py  aztp_config.py  camel_mcp_adapter.py  claude_mcp_adapter.py  crewai_mcp_adapter.py  enhanced_mcp_agent.py  google_ai_mcp_adapter.py  heterogeneous_group_chat.py  langchain_mcp_adapter.py  langgraph_mcp_adapter.py  llama_index_mcp_adapter.py  llamaindex_mcp_adapter.py  mcp_agent.py  mcp_decorator.py  microsoft_agent_framework.py  missing_frameworks.py  multi_chat.py  network_zones.py  openapi_protocol.py  payments.py  pydantic_ai_mcp_adapter.py  registry.py  security.py
agent_mcp-0.1.3/: setup.py
attached_assets/: Pasted-python-simplified-autonomous-demo-py-MCP-Agents-and-the-future-of-work--1743827537917.txt
demos/: README.md  comprehensive_framework_demo.py
demos/basic/: framework_examples.py  langchain_camel_demo.py  simple_chat.py  simple_integration_example.py
demos/collaboration/: group_chat_example.py  simplified_crewai_example.py
demos/core/: test_mcp_agent.py
demos/langgraph/: langgraph_agent_network.py  langgraph_example.py
demos/network/: email_agent.py  heterogeneous_network_example.py  test_deployed_network.py  test_gemini_collaboration.py  test_multi_provider_ai.py
demos/workflows/: mcp_features_demo.py  run_agent_collaboration_with_logs.py  test_router.py
docs/: framework_adapters.md  mcp_agent.md  mcp_transport.md
docs/code_documentation/: argo_agent_mcp_adapter.md  llama_index_mcp_adapter.md
functions/: mcp_network_server.py  requirements.txt
tests/: test_comprehensive.py  test_payment_adapters.py  test_payment_core.py
