[project]
name = "mcp-agent"
version = "0.1.0"
description = "An AutoGen agent with Model Context Protocol capabilities"
requires-python = ">=3.11"
dependencies = [
    "autogen>=0.8.3",
    "langchain-core>=0.3.51",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.25",
    "openai>=1.68.2",
    "pyautogen>=0.8.3",
]
